--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,14 @@
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
-	"devDependencies": {
+	"dependencies": {
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
+		"quantize": "^1.0.2",
+		"svelte": "^3.49.0"
+	},
+	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.31.0",
 		"@typescript-eslint/parser": "^5.31.0",
 		"autoprefixer": "^10.4.7",
@@ -24,17 +29,13 @@
 		"postcss": "^8.4.14",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.49.0",
 		"svelte-check": "^2.8.0",
+		"svelte-i18n": "^3.4.0",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.6",
 		"tslib": "^2.4.0",
 		"typescript": "^4.7.4",
 		"vite": "^3.0.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"quantize": "^1.0.2",
-		"svelte-i18n": "^3.4.0"
-	}
+	"type": "module"
 }
