--- a/api-position/package.json
+++ b/api-position/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"build": "tsc -p .",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
 		"format": "prettier --write --plugin-search-dir=. ."
@@ -25,8 +26,7 @@
 		"nodemon": "^2.0.19",
 		"prettier": "^2.7.1",
 		"ts-node": "^10.9.1",
-		"ts-node-dev": "^2.0.0",
-		"typescript": "^4.7.4"
+		"ts-node-dev": "^2.0.0"
 	},
 	"dependencies": {
 		"body-parser": "^1.20.0",
@@ -35,6 +35,7 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"pg": "^8.7.3",
-		"redis": "^4.2.0"
+		"redis": "^4.2.0",
+		"typescript": "^4.7.4"
 	}
 }
