--- a/api-streaming/package.json
+++ b/api-streaming/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"build": "tsc -p .",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
 		"format": "prettier --write --plugin-search-dir=. ."
@@ -31,8 +32,7 @@
 		"nodemon": "^2.0.19",
 		"prettier": "^2.7.1",
 		"ts-node": "^10.9.1",
-		"ts-node-dev": "^2.0.0",
-		"typescript": "^4.7.4"
+		"ts-node-dev": "^2.0.0"
 	},
 	"dependencies": {
 		"@logdna/tail-file": "^3.0.0",
@@ -50,6 +50,7 @@
 		"rimraf": "^3.0.2",
 		"subtitle": "^4.2.1",
 		"torrent-stream": "^1.2.1",
+		"typescript": "^4.7.4",
 		"undici": "^5.8.0",
 		"uuid": "^8.3.2"
 	}
