[Dev] email: add optional redirection email for tests

--- a/api-auth/.env.example
+++ b/api-auth/.env.example
@@ -23,3 +23,5 @@ API_GOOGLE_userinfo_url=https://www.googleapis.com/oauth2/v2/userinfo
 API_OUTLOOK_EMAIL=azer@t.y
 API_OUTLOOK_PASSWORD=azerty
 API_OUTLOOK_ADDRESSE=smtp-mail.outlook.com:25
+
+EMAIL_REDIRECTION_ADDRESSE=test.test@test.test
