--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,32 @@ services:
     # access to the server:
     # $> docker-compose exec server sh
 
+  api-picture:
+    build:
+      context: ./api-picture
+      dockerfile: ./Dockerfile.dev
+    env_file:
+      - ./.env
+      - ./postgres/.env
+      - ./redis/.env
+      - ./client/.env
+      - ./api-picture/.env
+    volumes:
+      - ./api-picture:/app
+      - picture-data:/app/storage
+      - /app/node_modules
+      - /app/.yarn
+    depends_on:
+      - postgres
+      - redis
+    restart: on-failure
+    links:
+      - client
+      - postgres
+      - redis
+    ports:
+      - "${API_PICTURE_PORT}:${API_PICTURE_PORT}"
+
   api-scrapper:
     build:
       context: ./
@@ -286,4 +312,6 @@ volumes:
   nginx-proxy-data:
     driver: local
   streaming-data:
+    driver: local
+  picture-data:
     driver: local
