--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -207,6 +207,8 @@ services:
       - ./redis/.env
       - ./api-auth/.env
       - ./api-user/.env
+      - ./api-media/.env
+      - ./api-scrapper/.env
     volumes:
       - ./postgres/init.sql:/docker-entrypoint-initdb.d/init-base.sql
       - ./postgres/init-test.sql:/docker-entrypoint-initdb.d/init-test.sql
