[Dev] api-picture: Update mounted volumes permissions to be shared with api-user [Fix] client: Fix search when going back [Fix] client: Fix sticky animated background [Fix] sqlc: Restore deleted APIs

--- a/api-picture/Dockerfile.dev
+++ b/api-picture/Dockerfile.dev
@@ -1,5 +1,6 @@
 FROM node:16-alpine3.15 as builder
 
+RUN addgroup -S hypertube && adduser -S hypertube -G hypertube
 RUN yarn set version berry
 
 WORKDIR /app
@@ -7,7 +8,7 @@ WORKDIR /app
 COPY . .
 RUN yarn install
 
-RUN mkdir -p /app/.cache
-RUN chown -R node:node /app/.cache
-USER node
+RUN mkdir -p /app/storage
+RUN chown -R hypertube:hypertube /app/storage
+USER hypertube
 ENTRYPOINT npx ts-node-dev --respawn index.ts
