--- a/api-picture/Dockerfile
+++ b/api-picture/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:16-alpine3.15 as builder
 
+RUN addgroup -S hypertube && adduser -S hypertube -G hypertube
 RUN yarn set version berry
 
 WORKDIR /app
@@ -13,7 +14,7 @@ FROM node:16-alpine3.15
 WORKDIR /app
 COPY --from=builder --chown=node:node /app .
 
-RUN mkdir -p /app/.cache
-RUN chown -R node:node /app/.cache
-USER node
+RUN mkdir -p /app/storage
+RUN chown -R hypertube:hypertube /app/storage
+USER hypertube
 ENTRYPOINT dumb-init node ./dist/index.js
