--- a/api-user/Dockerfile.dev
+++ b/api-user/Dockerfile.dev
@@ -1,5 +1,7 @@
 FROM golang:1.18.3-alpine3.16
 
+RUN addgroup -S hypertube && adduser -S hypertube -G hypertube
+
 # https://levelup.gitconnected.com/docker-for-go-development-a27141f36ba9
 
 # copy api files
@@ -14,4 +16,7 @@ RUN go mod download
 RUN go get github.com/githubnemo/CompileDaemon
 RUN go install -v github.com/githubnemo/CompileDaemon
 
+RUN mkdir -p /hypertube/app/storage
+RUN chown -R hypertube:hypertube /hypertube/app/storage
+USER hypertube
 ENTRYPOINT CompileDaemon --build="go build main.go" --command=./main
