[Dev] api-user/api-picture: Move picture upload and delete routes to api-picture

--- a/api-picture/Dockerfile
+++ b/api-picture/Dockerfile
@@ -1,6 +1,5 @@
 FROM node:16-alpine3.15 as builder
 
-RUN addgroup -S hypertube && adduser -S hypertube -G hypertube
 RUN yarn set version berry
 
 WORKDIR /app
@@ -15,6 +14,6 @@ WORKDIR /app
 COPY --from=builder --chown=node:node /app .
 
 RUN mkdir -p /app/storage
-RUN chown -R hypertube:hypertube /app/storage
-USER hypertube
+RUN chown -R node:node /app/storage
+USER node
 ENTRYPOINT dumb-init node ./dist/index.js
