--- a/api-picture/Dockerfile.dev
+++ b/api-picture/Dockerfile.dev
@@ -1,6 +1,5 @@
 FROM node:16-alpine3.15 as builder
 
-RUN addgroup -S hypertube && adduser -S hypertube -G hypertube
 RUN yarn set version berry
 
 WORKDIR /app
@@ -9,6 +8,6 @@ COPY . .
 RUN yarn install
 
 RUN mkdir -p /app/storage
-RUN chown -R hypertube:hypertube /app/storage
-USER hypertube
+RUN chown -R node:node /app/storage
+USER node
 ENTRYPOINT npx ts-node-dev --respawn index.ts
