--- a/api-picture/package.json
+++ b/api-picture/package.json
@@ -17,6 +17,7 @@
 		"@types/cookie-parser": "^1.4.3",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
+		"@types/express-fileupload": "^1.2.3",
 		"@types/node": "^18.0.6",
 		"@types/pg": "^8.6.5",
 		"@typescript-eslint/eslint-plugin": "^5.30.7",
@@ -34,6 +35,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"express-fileupload": "^1.4.0",
 		"jdenticon": "^3.1.1",
 		"pg": "^8.7.3",
 		"redis": "^4.2.0",
