[Dev] docker: Add named volumesto avoid random volumes [Fix] docker: Update api-picture production image

--- a/api-picture/.dockerignore
+++ b/api-picture/.dockerignore
@@ -1,8 +1,9 @@
 .dockerignore
-node_modules
 npm-debug.log
 Dockerfile
 .git
 .gitignore
-.yarn
-build
+**/build
+**/dist
+**/node_modules
+**/.yarn
