--- a/client/.dockerignore
+++ b/client/.dockerignore
@@ -1,10 +1,17 @@
 .dockerignore
-node_modules
 npm-debug.log
 Dockerfile
 Dockerfile.dev
 .git
 .gitignore
-.yarn
-.svelte-kit
-build
+.dockerignore
+npm-debug.log
+Dockerfile
+.git
+.gitignore
+**/.cache
+**/dist
+**/build
+**/node_modules
+**/.yarn
+**/.svelte-kit
