--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     depends_on:
       - postgres
       - redis
-    restart: on-failure
+    restart: unless-stopped
     links:
       - postgres
       - redis
@@ -39,7 +39,7 @@ services:
     depends_on:
       - postgres
       - redis
-    restart: on-failure
+    restart: unless-stopped
     links:
       - postgres
       - redis
@@ -67,7 +67,7 @@ services:
     depends_on:
       - postgres
       - redis
-    restart: on-failure
+    restart: unless-stopped
     links:
       - client
       - postgres
@@ -87,7 +87,7 @@ services:
       - ./.shared:/hypertube/.shared
     depends_on:
       - postgres
-    restart: on-failure
+    restart: unless-stopped
     links:
       - postgres
     ports:
@@ -109,7 +109,7 @@ services:
       - postgres
       - api-scrapper
       - redis
-    restart: on-failure
+    restart: unless-stopped
     links:
       - postgres
       - api-scrapper
@@ -135,7 +135,7 @@ services:
       - api-streaming-node-yarn:/app/.yarn
     depends_on:
       - postgres
-    restart: on-failure
+    restart: unless-stopped
     links:
       - client
       - postgres
@@ -159,7 +159,7 @@ services:
     depends_on:
       - postgres
       - redis
-    restart: on-failure
+    restart: unless-stopped
     links:
       - client
       - postgres
@@ -223,7 +223,7 @@ services:
 
   postgres:
     image: postgres:14.4-alpine
-    restart: always
+    restart: unless-stopped
     env_file:
       - ./postgres/.env
     ports:
@@ -236,6 +236,7 @@ services:
 
   redis:
     image: redis:7.0.2-alpine
+    restart: unless-stopped
     command: --port ${REDIS_PORT}
     env_file:
       - ./redis/.env
@@ -293,6 +294,7 @@ services:
       - tmdb-proxy
     ports:
       - "${CLIENT_PORT}:${CLIENT_PORT}"
+    restart: unless-stopped
 
   streaming-proxy:
     image: nginx:1.23-alpine
@@ -303,6 +305,7 @@ services:
       - streaming-data:/var/www/cache
     ports:
       - "${STREAMING_PROXY_PORT}:80"
+    restart: unless-stopped
     profiles:
       - debug
 
