--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
 	"dependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-node": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "1.0.0-next.403",
 		"quantize": "^1.0.2",
 		"svelte": "^3.49.0"
 	},
