[Dev] demo: add demo mode in the api-auth

--- a/api-auth/.env.example
+++ b/api-auth/.env.example
@@ -25,3 +25,5 @@ API_OUTLOOK_PASSWORD=azerty
 API_OUTLOOK_ADDRESSE=smtp-mail.outlook.com:25
 
 EMAIL_REDIRECTION_ADDRESSE=test.test@test.test
+
+DEMO_MODE=true
