[Fix] prod/client: fix the port reading for client in production

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -13,4 +13,4 @@ FROM builder
 WORKDIR /app
 COPY --from=builder /app .
 
-ENTRYPOINT node ./build/index.js
+ENTRYPOINT PORT=${CLIENT_PORT} node ./build/index.js
